chore(Intro tags): Fix icon spacing on large screens

--- a/components/Intro/intro.module.scss
+++ b/components/Intro/intro.module.scss
@@ -81,7 +81,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-items: stretch;
-  justify-content: space-evenly;
+  justify-content: space-between;
   list-style: inside none;
   margin: 0;
   padding: 0;
